// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryItemInfo should match component snapshot 1`] = `
<article
  className="category-info-container"
>
  <section
    className="rocket-info"
  >
    <div
      className="image-side"
    >
      <img
        alt="astronaut"
        src="default-rocket-img.svg"
      />
      <h2>
        Angara A5
      </h2>
    </div>
    <div
      className="details-side"
    >
      <p
        className="bio"
      >
        Currently the largest rocket in the Angara family, Angara A5 utilizes five Universal Rocket Modules as the first stage, and is designed to phase out Proton.
      </p>
    </div>
  </section>
</article>
`;

exports[`CategoryItemInfo should match component snapshot when data is loading 1`] = `
<article
  className="category-info-container"
>
  <section
    className="rocket-info"
  >
    <div
      className="image-side"
    >
      <img
        alt="astronaut"
        src="default-rocket-img.svg"
      />
      <h2>
        Loading...
      </h2>
    </div>
    <div
      className="details-side"
    >
      <p
        className="bio"
      />
    </div>
  </section>
</article>
`;

exports[`CategoryItemInfo should render different item info based on category 1`] = `
<article
  className="category-info-container"
>
  <section
    className="astronaut-info"
  >
    <div
      className="image-side"
    >
      <img
        alt="astronaut"
        src="https://daszojo4xmsc6.cloudfront.net/media/astronaut_images/robert2520hines_image_20181129205955.jpg"
      />
      <h2>
        Robert Hines
      </h2>
    </div>
    <div
      className="details-side"
    >
      <p
        className="bio"
      >
        Robert "Bob" Thomas Hines, Jr. is an American fighter pilot and NASA astronaut candidate of the class of 2017.
      </p>
    </div>
  </section>
</article>
`;
